tests/baselines/reference/whileBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/whileBreakStatements.ts(11,1): error TS7028: Unused label.
tests/cases/conformance/statements/breakStatements/whileBreakStatements.ts(19,5): error TS7028: Unused label.
tests/cases/conformance/statements/breakStatements/whileBreakStatements.ts(31,1): error TS7027: Unreachable code detected.


==== tests/cases/conformance/statements/breakStatements/whileBreakStatements.ts (3 errors) ====
    while(true) {
        break;
    } 
    
    ONE:
    
    while (true) {
        break ONE;
    }
    
    TWO:
    ~~~
!!! error TS7028: Unused label.
    THREE:
    while (true) {
        break THREE;
    }
    
    FOUR:
    while (true) {
        FIVE:
        ~~~~
!!! error TS7028: Unused label.
        while (true) {
            break FOUR;
        }
    }
    
    while (true) {
        SIX:
        while (true)
            break SIX;
    }
    
    SEVEN:
    ~~~~~
!!! error TS7027: Unreachable code detected.
    while (true)
        while (true)
            while (true)
                break SEVEN;
    
    EIGHT:
    while (true) {
        var fn = function () { }
        break EIGHT;
    }
    